; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-arphrd-list.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-arphrd-list.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LOG_INFO = common dso_local global i32 0, align 4
@ARPHRD_VOID = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"%i: %s\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"huddlduddl\00", align 1
@EINVAL = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [1 x i8] zeroinitializer, align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* @LOG_INFO, align 4
  %9 = call i32 @test_setup_logging(i32 %8)
  store i32 0, i32* %6, align 4
  br label %10

10:                                               ; preds = %31, %2
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* @ARPHRD_VOID, align 4
  %13 = add nsw i32 %12, 1
  %14 = icmp sle i32 %11, %13
  br i1 %14, label %15, label %34

15:                                               ; preds = %10
  %16 = load i32, i32* %6, align 4
  %17 = call i8* @arphrd_to_name(i32 %16)
  store i8* %17, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %20, label %30

20:                                               ; preds = %15
  %21 = load i32, i32* %6, align 4
  %22 = load i8*, i8** %7, align 8
  %23 = call i32 @log_info(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %21, i8* %22)
  %24 = load i8*, i8** %7, align 8
  %25 = call i32 @arphrd_from_name(i8* %24)
  %26 = load i32, i32* %6, align 4
  %27 = icmp eq i32 %25, %26
  %28 = zext i1 %27 to i32
  %29 = call i32 @assert_se(i32 %28)
  br label %30

30:                                               ; preds = %20, %15
  br label %31

31:                                               ; preds = %30
  %32 = load i32, i32* %6, align 4
  %33 = add nsw i32 %32, 1
  store i32 %33, i32* %6, align 4
  br label %10

34:                                               ; preds = %10
  %35 = load i32, i32* @ARPHRD_VOID, align 4
  %36 = add nsw i32 %35, 1
  %37 = call i8* @arphrd_to_name(i32 %36)
  %38 = icmp eq i8* %37, null
  %39 = zext i1 %38 to i32
  %40 = call i32 @assert_se(i32 %39)
  %41 = call i32 @arphrd_from_name(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %42 = load i32, i32* @EINVAL, align 4
  %43 = sub nsw i32 0, %42
  %44 = icmp eq i32 %41, %43
  %45 = zext i1 %44 to i32
  %46 = call i32 @assert_se(i32 %45)
  %47 = call i32 @arphrd_from_name(i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str.2, i64 0, i64 0))
  %48 = load i32, i32* @EINVAL, align 4
  %49 = sub nsw i32 0, %48
  %50 = icmp eq i32 %47, %49
  %51 = zext i1 %50 to i32
  %52 = call i32 @assert_se(i32 %51)
  ret i32 0
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i8* @arphrd_to_name(i32) #1

declare dso_local i32 @log_info(i8*, i32, i8*) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @arphrd_from_name(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
